# django-urlconf-export

./: .gitignore  CHANGELOG.md  LICENCE  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish_to_pypi.yml  run_tox_tests_and_lint.yml
src/django_urlconf_export/: export_urlconf.py  import_urlconf.py  language_utils.py  urlconf_qa.py
src/django_urlconf_export/management/commands/: export_urlconf_to_file.py
src/django_urlconf_export/views/: export.py  http404.py
tests/django_urlconf_export/: conftest.py  test_export_urlconf.py  test_import_urlconf.py  test_urlconf_qa.py
