[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[flake8]
max-line-length = 100
select = E,W,F,I,C
exclude = *migrations/*
ignore = W503,E501  # W503 is not PEP8 compliant and black doesnt always break lines well
max-complexity = 26

[isort]
skip_glob=*migrations/*
line_length=100
indent=4
force_grid_wrap=0
multi_line_output=3
default_section=THIRDPARTY
use_parentheses=true
combine_star=true
balanced_wrapping=false
known_first_party=django_urlconf_export
include_trailing_comma=true
known_tests=tests
combine_as_imports=true
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,TESTS
